configured edit_home form

--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -131,8 +131,9 @@
                         class="btn btn-primary btn-xl text-uppercase disabled"
                         id="submitButton"
                         type="submit"
+                        disabled
                     >
-                        Send Message
+                        Business Email is Currently Inactive!
                     </button>
                     </div>
                 </form>
@@ -147,13 +148,13 @@
                     <p class="text-muted">Official Social Medias</p>
                     <a
                       class="btn btn-dark btn-social mx-2"
-                      href="#!"
+                      href="https://www.facebook.com/serambi.mungil/"
                       aria-label="Parveen Anand Facebook Profile"
                       ><i class="fab fa-facebook-f"></i
                     ></a>
                     <a
                       class="btn btn-dark btn-social mx-2"
-                      href="#!"
+                      href="https://www.instagram.com/serambimungil/"
                       aria-label="Parveen Anand LinkedIn Profile"
                       ><i class="fa fa-instagram" aria-hidden="true"></i></a>
                   </div>
@@ -165,15 +166,10 @@
                     <p class="text-muted">Founder & CEO</p>
                     <a
                       class="btn btn-dark btn-social mx-2"
-                      href="#!"
+                      href="https://www.instagram.com/fietiara/"
                       aria-label="Diana Petersen LinkedIn Profile"
                       ><i class="fa fa-instagram" aria-hidden="true"></i></i
                     ></a>
-                    <a
-                    class="btn btn-dark btn-social mx-2"
-                    href="#!"
-                    aria-label="Diana Petersen Facebook Profile"
-                    ><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                   </div>
                 </div>
               </div>
