--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -26,12 +26,7 @@
             <div class="col-lg-6">
                 <h1 class="masthead-subheading" style="font-size: 2.5rem; text-align: left;">Serambi Mungil</h1>
                 <!-- 9 lines for large screen -->
-                <p class="masthead-subheading" style="font-size: 1.25rem; text-align: left;">
-                  Freshly baked sweet & savoury goods <br>
-                  Made by <a href="https://www.instagram.com/fietiara/" style="color: #DBABA9;">@fietiara</a> <br>
-                  📍 Available in Karawaci, Gading Serpong, and BSD <br>
-                  🛵 Delivery via Borzo/Paxel/Grab/Gosend etc.
-                </p>
+                <p class="masthead-subheading" style="font-size: 1.25rem; text-align: left;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, voluptas commodi, minima aut reiciendis esse beatae pariatur, debitis tempore eum eligendi accusantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, voluptas commodi, minima aut reiciendis esse beatae pariatur, debitis tempore eum eligendi accusantium. Dolores quaerat at nostrum excepturi, temporibus hic dicta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, voluptas commodi, minima aut reiciendis esse beatae pariatur, debitis tempore eum eligendi accusantium.</p>
             </div>
         </div>
     </div>
