--- a/main/templates/main/edit_home.html
+++ b/main/templates/main/edit_home.html
@@ -5,14 +5,8 @@
 
 {% block navlinks%}
 <li class="nav-item">
-    <a class="nav-link" href="{% url 'home' %}"><i class="fa fa-arrow-left" aria-hidden="true"></i>&nbsp; Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'about' %}">About</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'contact' %}">Contact</a>
-  </li>
+  <a class="nav-link" href="{% url 'home' %}"><i class="fa fa-arrow-left" aria-hidden="true"></i>&nbsp; Go Back</a>
+</li>
 {% endblock %}
 
 {% block content %}
